# widget-animation-framework

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  WidgetAnimationFrameworkExample.cpp
include/widget-animation-framework/: Animation.h  StackedWidgetAnimation.h  widget-animation-framework.hpp
include/widget-animation-framework/SideSlide/: SideSlideAnimator.h  SideSlideDecorator.h
source/: AbstractAnimator.h  widget-animation-framework.cpp
source/Animation/: Animation.cpp
source/Animation/CircleFill/: CircleFillAnimator.h
source/Animation/Expand/: ExpandAnimator.h
source/Animation/SideSlide/: SideSlideAnimator.cpp  SideSlideAnimator.h  SideSlideDecorator.cpp
source/Animation/Slide/: SlideAnimator.h
source/StackedWidgetAnimation/: StackedWidgetAnimation.cpp  StackedWidgetAnimation.h
source/StackedWidgetAnimation/StackedWidgetFadeIn/: StackedWidgetFadeInAnimator.h
source/StackedWidgetAnimation/StackedWidgetSlide/: StackedWidgetSlideAnimator.h
source/StackedWidgetAnimation/StackedWidgetSlideOver/: StackedWidgetSlideOverAnimator.h
